netlink15_derive/tests/ui/deserializable/derive-on-struct-fails.stderr
error: proc-macro derive panicked
 --> tests/ui/deserializable/derive-on-struct-fails.rs:3:28
  |
3 | #[derive(Debug, PartialEq, NetlinkAttributeDeserializable)]
  |                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: NetlinkAttributeDeserializable derive may only be used on enums.
