netlink15_derive/tests/ui/deserializable/derive-on-struct-fails.rs
use netlink15_derive::NetlinkAttributeDeserializable;

#[derive(Debug, PartialEq, NetlinkAttributeDeserializable)]
struct TestStruct {}

fn main() {}
